[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "haipy"
version = "1.0.3"
authors = [
  { name="gcarmix", email="carmixdev@gmail.com" },
]
description = "Hash Identifier for Python (derived from haiti)"
readme = "README.md"
dependencies = ["importlib_resources"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["entry-points","maintainers","license"]
[project.scripts]
haipy = "haipy.haipy:main"
[project.urls]
"Homepage" = "https://github.com/gcarmix/haipy"
"Bug Tracker" = "https://github.com/gcarmix/haipy/issues"
